# usb-rfid-reader

./: README.md  rfid_reader.py  scancodes.py  setup.cfg  setup.py  util.py
src/usb_rfid_reader/: rfid_reader.py  util.py
