[metadata]
# replace with your username:
name = usb-rfid-reader-cybrnode
version = 0.0.1
author = Huzaifah Asif
author_email = huzaifah.asif.b@gmail.com
description = Package for reading input from USB RFID Readers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cybrnode/usb-rfid-reader
project_urls =
    Bug Tracker = https://github.com/cybrnode/usb-rfid-reader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
